workspace = { members = ["buffers_unsafe_copy"] }
[package]
name = "in_memory_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
chrono = "0.4.37"
enum-map = "2.7.3"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
sqlparser = { version = "0.44.0", features = ["serde", "visitor"] }
buffers_unsafe_copy = { path =  "./buffers_unsafe_copy" }
bitcode = { version = "0.6.0", features = ["serde"] }
